# saffron-engine

./: AGENTS.md  CLAUDE.md  CMakeLists.txt  CONVENTIONS.md
.github/workflows/: docs.yml
cmake/: CompileShaders.cmake  Dependencies.cmake  Slang.cmake  nanosvg_impl.cpp  stb_impl.cpp
docs/content/: overview.md
editor/: .oxlintrc.json  .prettierignore  CMakeLists.txt  index.html  package.json  vite.config.ts
editor-old/source/: main.cpp
editor/assets/shaders/: ao_blur.slang  contact.slang  mesh.slang  point_shadow.slang  restir_initial.slang  ssgi.slang
editor/scripts/: gen-protocol.ts
editor/source/: main.cpp
editor/src/: styles.css
editor/src-tauri/: Cargo.toml  tauri.conf.json
editor/src-tauri/capabilities/: default.json
editor/src-tauri/src/: lib.rs  wayland_viewport.rs
editor/src/app/: App.tsx  CreateMenu.tsx  Layout.tsx  LoadingOverlay.tsx  MenuBar.tsx  Notifications.tsx  ProjectMenu.tsx  ProjectStartupModal.tsx  SettingsModal.tsx  WindowTitlebar.tsx  layoutBus.ts  useGizmoShortcuts.ts
editor/src/components/: AlarmBadge.tsx  AssetPicker.tsx  AssetTile.tsx  AssetViewer.tsx  CaptureControls.tsx  ColorField.tsx  ComboField.tsx  FrameTimeGraph.tsx  MetricsRefreshControl.tsx  NumberDrag.tsx  ScriptSlots.tsx  SliderField.tsx  VectorEditor.tsx  assetTile.dnd.test.ts  fieldRenderer.tsx  frameTimeGraph.niceCeil.test.ts
editor/src/components/dock/: DockDropOverlay.tsx  DockTabContextMenu.tsx  TabStrip.tsx  dockDrag.test.ts  dockDrag.ts  panelRegistry.tsx  useTabStripDrag.ts
editor/src/components/timeline/: TimelineSurface.tsx  TimelineTransport.tsx  shared.ts
editor/src/components/ui/: slider.tsx  toast.tsx
editor/src/control/: client.ts  coalesce.ts
editor/src/lib/: alarmToasts.ts  frameSeries.ts  keybindings.test.ts  renderLog.ts  timelineCanvas.helpers.test.ts  timelineCanvas.ts  undo.test.ts  undo.ts  useScrubValue.ts  useSubsurfaceBounds.ts
editor/src/materials/: graph.test.ts  graph.ts
editor/src/panels/: AssetEditorWorkspace.tsx  AssetFolderTree.tsx  AssetsPanel.tsx  BottomDock.tsx  ClipList.tsx  EnvironmentPanel.tsx  HierarchyPanel.tsx  HierarchyTree.tsx  InspectorPanel.tsx  MaterialEditorPanel.tsx  MaterialGraphEditor.tsx  RenderStatsPanel.tsx  RightSidebar.tsx  SkeletonTree.tsx  TimelinePanel.tsx  Topbar.tsx  ViewportPanel.tsx  assetFolderTree.helpers.test.ts  materialGraphEqual.test.ts
editor/src/protocol/: index.ts  se-types.ts
editor/src/state/: dockLayout.test.ts  dockLayout.ts  store.test.ts  store.ts
engine/: CMakeLists.txt
engine/assets/icons/: AGENTS.md
engine/assets/shaders/: contact.slang  gizmo_overlay.slang  lighting.slang  mesh.slang  motion.slang  skin.slang
engine/source/: main.cpp
engine/source/saffron/animation/: animation.cpp  animation.cppm
engine/source/saffron/app/: app.cppm
engine/source/saffron/assets/: AGENTS.md  assets.cppm  assets_thumbnail.cpp
engine/source/saffron/control/: AGENTS.md  command.cppm  control.cppm  control_commands_animation.cpp  control_commands_asset.cpp  control_commands_physics.cpp  control_commands_render.cpp  control_commands_scene.cpp  control_dto.cppm  control_dto_serde.generated.cpp  control_server.cpp
engine/source/saffron/core/: core.cppm
engine/source/saffron/editor/: editor.cppm  editor_components.cpp  editor_context.cppm  editor_panels.cpp
engine/source/saffron/editorapp/: editor_app.cppm
engine/source/saffron/geometry/: geometry.cppm
engine/source/saffron/host/: host.cppm
engine/source/saffron/json/: json.cppm
engine/source/saffron/physics/: physics.cpp  physics.cppm  physics_types.cppm
engine/source/saffron/rendering/: render_graph.cppm  renderer.cppm  renderer_aa.cpp  renderer_capture.cpp  renderer_detail.cppm  renderer_detail_ibl.cpp  renderer_drawlist.cpp  renderer_lighting.cpp  renderer_pipelines.cpp  renderer_profiler.cpp  renderer_textures.cpp  renderer_thumbnail.cpp  renderer_types.cppm
engine/source/saffron/scene/: AGENTS.md  scene.cppm  scene_component_serde.generated.cpp
engine/source/saffron/sceneedit/: AGENTS.md  scene_edit_camera.cpp  scene_edit_components.cpp  scene_edit_context.cpp  scene_edit_context.cppm  scene_edit_gizmo.cpp  scene_edit_play.cpp  sceneedit.cppm
engine/source/saffron/script/: script.cppm  script_runtime.cpp
engine/source/saffron/signal/: signal.cppm
engine/source/saffron/ui/: ui.cppm
engine/source/saffron/window/: window.cppm
plans/: todo.md
plans/animations/: README.md  phase-01-animation-module-and-types.md  phase-02-gltf-clip-import-and-sanim.md  phase-03-player-component-and-runtime.md  phase-04-transitions-and-blending.md  phase-05-control-plane-and-cli.md  phase-06-compute-skinning-prepass.md  phase-07-passes-read-deformed-buffer.md  phase-08-motion-vectors.md  phase-09-skinned-blas-rebuild.md  phase-10-skeleton-overlay.md  phase-11-editor-bottom-dock.md  phase-12-timeline-panel.md  phase-13-foot-ik-and-physics-ahead.md
plans/debug-visualization/: README.md  phase-1-overlays.md  phase-2-wireframe.md  phase-3-grid.md  phase-4-channels.md
plans/editor-view/: README.md  phase-01-rig-query-commands.md  phase-02-preview-scene.md  phase-03-preview-furnishing-and-chrome.md  phase-04-subsurface-bounds-hook.md  phase-05-rig-editor-viewtab.md  phase-06-skeleton-tree-panel.md  phase-07-clip-list-and-details.md  phase-08-skeleton-tree-panel.md  phase-08-timeline-extraction.md  phase-09-clip-list-and-details.md  phase-09-timeline-in-rig-editor.md  phase-10-animation-asset-affordances.md  phase-10-timeline-extraction.md  phase-11-docs-e2e-hardening.md  phase-11-timeline-in-rig-editor.md  phase-12-animation-asset-affordances.md  phase-13-docs-e2e-hardening.md
plans/lighting/: README.md  phase-1-pbr-brdf-hdr.md  phase-2-image-based-lighting.md  phase-3-dynamic-shadow-maps.md  phase-4-screen-space-gi-ao.md  phase-5-temporal-aa-history.md  phase-6-ddgi-probe-gi.md  phase-7-raytracing-foundation.md  phase-8-restir-many-light.md
plans/material-uplift/: README.md  phase-01-surface-lighting-seam.md  phase-02-material-params-buffer.md  phase-03-native-smat-asset.md  phase-04-tangents-vertex-format.md  (+14 more)
(+339 files in other folders)
