[package]
name = "saffron-editor"
version = "0.1.0"
description = "SaffronEngine TypeScript editor shell"
edition = "2024"
rust-version = "1.85"

[lib]
name = "saffron_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11", features = [] }
tauri-plugin-dialog = "2"
