[package]
name = "saffron-editor"
version = "0.1.0"
description = "SaffronEngine TypeScript editor shell"
edition = "2024"
rust-version = "1.85"

[lib]
name = "saffron_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11", features = [] }
tauri-plugin-dialog = "2"

# The wayland subsurface presenter: GTK/GDK access for the transparent toplevel prep
# (versions track what tauri/wry already resolve so the types unify), and the wayland
# crates drive the subsurface over GTK's own connection (system libwayland backend),
# presenting the engine's frames at the monitor's refresh rate.
[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
gdk = "0.18"
glib = "0.18"
webkit2gtk = "2.0"
wayland-client = "0.31"
wayland-backend = { version = "0.3", features = ["client_system"] }
wayland-protocols = { version = "0.32", features = ["client"] }
